kubernetes/prod-cluster/infra/cilium/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hubble-gateway
  namespace: kube-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: hubble # must be the same as secret
    hosts:
    - "hubble.thingsgreener.com"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hubble.thingsgreener.com"
   # tls:
   #   httpsRedirect: true
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hubble-vs
  namespace: kube-system
spec:
  hosts:
  - "hubble.thingsgreener.com"
  gateways:
  - hubble-gateway
  http:
  - name: "hubble-routes"
    match:
      - scheme:
          exact: http
        uri:
          # This is not a perfect regex but RE2 does not allow negations so we have to hack a it
          # Note: this pattern will redirect to HTTPS all URIs NOT starting with `/.well-` (which should be the best case since your business URIs are unlikely to start with that)
          # this to let pass requests to renew certs like `/.well-known/acme-challenge/...`
          regex: "^/(([^\\.].*)|(\\.[^w].*)|(\\.w[^e].*)|(\\.we[^l].*)|(\\.wel[^l].*)|(\\.well[^\\-].*))"
    redirect:
      scheme: https
      redirectCode: 302 # 302 to not mess with risky permanent redirections since a workaround
  - route:
    - destination:
        host: hubble-ui
        port:
          number: 80
---
