kubernetes/prod-cluster/infra/cilium/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: hubble-authz
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      istio: ingressgateway 
  action: DENY
  rules:
  - from:
    - source:
        notIpBlocks: ["192.168.0.0/16"]
    to:
    - operation:
        hosts: ["hubble.thingsgreener.com"]
#        notPaths: ["/.well-known/acme-challenge/*"] # to try
